# totemcounterv2

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/java/com/m4ssive/totemcounterv2/: ModMenuIntegration.java  TotemCounterV2Mod.java  TotemTracker.java
src/main/java/com/m4ssive/totemcounterv2/command/: ImperialCommand.java  ResetCounterCommand.java  ResetScoreboardCommand.java  SetPopsCommand.java
src/main/java/com/m4ssive/totemcounterv2/config/: ModConfig.java  PresetColors.java
src/main/java/com/m4ssive/totemcounterv2/gui/: ConfigScreen.java  EditModeScreen.java  FirstTimeSetupScreen.java  TotemHud.java
src/main/java/com/m4ssive/totemcounterv2/mixin/: ChatInputMixin.java  ChatScreenMixin.java  CheckboxWidgetMixin.java  ClientPlayNetworkHandlerMixin.java  ClientPlayerEntityMixin.java  EntityRendererMixin.java  InGameHudMixin.java  LivingEntityRendererMixin.java  MouseMixin.java  PlayerEntityRendererMixin.java  PlayerListHudMixin.java  WorldRendererMixin.java
src/main/java/com/m4ssive/totemcounterv2/nativecode/: NativeGUIHelper.java
src/main/java/com/m4ssive/totemcounterv2/sound/: SoundManager.java
src/main/java/com/m4ssive/totemcounterv2/util/: TextFormatter.java
src/main/native/: CMakeLists.txt  gui_helper.cpp
src/main/resources/: fabric.mod.json  m4ssive.mixins.json
src/main/resources/assets/totemcounterv2/: ICON_README.txt
src/main/resources/assets/totemcounterv2/lang/: en_us.json  tr_tr.json
